--- a/app/src/main/res/layout/activity_teacher_dashboard.xml
+++ b/app/src/main/res/layout/activity_teacher_dashboard.xml
@@ -191,7 +191,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Tạo khóa học"
+                            android:text="Quản lý đăng ký"
                             android:backgroundTint="@android:color/holo_blue_dark"
                             android:textColor="@android:color/white"
                             android:layout_marginEnd="8dp" />
