--- a/app/src/main/res/drawable/animated_indicator.xml
+++ b/app/src/main/res/drawable/animated_indicator.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="#667eea"
-        android:centerColor="#764ba2"
-        android:endColor="#f093fb"
-        android:angle="135"
+        android:endColor="#764ba2"
+        android:angle="90"
         android:type="linear" />
+    <corners android:radius="2dp" />
 </shape>
 
