--- a/app/src/main/res/drawable/gradient_student_card.xml
+++ b/app/src/main/res/drawable/gradient_student_card.xml
@@ -4,7 +4,8 @@
         android:startColor="#667eea"
         android:centerColor="#764ba2"
         android:endColor="#f093fb"
-        android:angle="135"
+        android:angle="45"
         android:type="linear" />
+    <corners android:radius="16dp" />
 </shape>
 
