--- a/app/src/main/res/drawable/status_indicator.xml
+++ b/app/src/main/res/drawable/status_indicator.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#667eea"
-        android:centerColor="#764ba2"
-        android:endColor="#f093fb"
-        android:angle="135"
+        android:startColor="#4CAF50"
+        android:endColor="#8BC34A"
+        android:angle="90"
         android:type="linear" />
+    <corners android:radius="3dp" />
 </shape>
 
